Fix uneven navbar

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -30,7 +30,7 @@ $container-large-desktop:      (1140px + ($grid-gutter-width * 2));
 }
 
 .container {
-  max-width: 40em;
+  max-width: 600px;
   padding-left: $grid-gutter-width;
   padding-right: $grid-gutter-width;
 }
